Add LayerDialog tests and github actions workflow